--- a/package.json
+++ b/package.json
@@ -13,21 +13,25 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
+    "nodemailer": "^7.0.5",
     "ts-node-dev": "^2.0.0",
     "zod": "^4.0.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
+    "@types/nodemailer": "^6.4.17",
     "eslint": "^9.32.0",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.0"
