--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "nodemailer": "^7.0.5",
+    "pdfkit": "^0.17.1",
     "ts-node-dev": "^2.0.0",
     "zod": "^4.0.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@types/nodemailer": "^6.4.17",
+    "@types/pdfkit": "^0.17.2",
+    "@types/stream-buffers": "^3.0.7",
     "eslint": "^9.32.0",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.0"
