--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^8.17.1",
     "nodemailer": "^7.0.5",
     "pdfkit": "^0.17.1",
+    "stream-buffers": "^3.0.3",
     "ts-node-dev": "^2.0.0",
     "zod": "^4.0.15"
   },
